--- a/style.css
+++ b/style.css
@@ -346,7 +346,7 @@ section:nth-of-type(3) {
     margin: 0 auto;
     justify-self: right;
     max-height: 700px;
-    column-gap: 50px;;
+    column-gap: 4vw;
 }
 
 .section-left {
@@ -405,7 +405,7 @@ section:nth-of-type(3) {
 .height-diff-down-img {
     position: relative;
     /* z-index: 1; */
-    width: 75%;
+    width: 100%;
     height: auto;
     top: 0;
     left: 0;
@@ -414,7 +414,7 @@ section:nth-of-type(3) {
 
 .height-diff-up-img {
     position: relative;
-    width: 75%;
+    width: 100%;
     height: 100%;
     top: 0;
     left: 0;
@@ -422,8 +422,12 @@ section:nth-of-type(3) {
     z-index: 1;
 }
 
+.height-diff-up-img, .height-diff-down-img{
+    width: max-content;
+}
+
 .height-diff-up-img > img:not(.rot), .height-diff-down-img > img{
-    width: 100%;
+    width: 13vw
 }
 
 .rot {
@@ -947,8 +951,12 @@ button.splide__pagination__page.is-active {
     } */
 
     .height-diff-up-img, .height-diff-down-img{
-        width: 75%;
+        width: max-content;
         margin: 0 auto;
+    }
+
+    .height-diff-up-img > img:not(.rot), .height-diff-down-img > img{
+        width: 30vw;
     }
 
 
